Player & Scoring improvements + core spawning logic

--- a/EatTheMath/Assembly-CSharp.csproj
+++ b/EatTheMath/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Core\Player.cs" />
+    <Compile Include="Assets\Scripts\Core\Spawner.cs" />
     <Compile Include="Assets\Scripts\Managers\GameController.cs" />
     <Compile Include="Assets\Scripts\Managers\ScoreManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
